--- a/slides/part-0.tex
+++ b/slides/part-0.tex
@@ -63,6 +63,10 @@
 	\href{https://z.umn.edu/ADCdiscord}{https://z.umn.edu/ADCdiscord}
 \end{frame}
 
+\begin{frame}{Guide}
+	We will be following this guide: \href{https://github.com/ADC-UMN/todotorial}{https://github.com/ADC-UMN/todotorial}. Feel free to go ahead of the workshops at your own pace.
+\end{frame}
+
 \begin{frame}{What is React?}
 	React is a \emph{web application framework}. 
 
