--- a/slides/part-0.tex
+++ b/slides/part-0.tex
@@ -36,7 +36,7 @@
 \begin{frame}{Logistics...}
 	Streaming
 	\begin{itemize}
-		\item \href{https://umn.zoom.us/my/adc.workshop}{https://umn.zoom.us/my/adc.workshop}
+		\item \href{https://z.umn.edu/adc-zoom}{https://z.umn.edu/adc-zoom}
 		\item Recordings will be posted as unlisted YouTube videos as linked at \href{https://adcumn.org/meetings}{https://adcumn.org/meetings}
 	\end{itemize}
 
@@ -139,6 +139,19 @@
 	\bigskip\pause
 
 	Run \texttt{npm install -g expo-cli}. \pause You can now create a template for a new project with \texttt{expo init} and test it with \texttt{expo start}.
+\end{frame}
+
+\begin{frame}{A look at what's ahead}
+	\begin{enumerate}
+		\item Components, Styling, and Testing
+		\item Data Manipulation and State Handling
+		\item Persistent Lists using AsyncStorage
+		\item Deployment to Google Play Store
+	\end{enumerate}
+
+	\bigskip\pause
+
+	Here's the finished product: \href{https://snack.expo.dev/@nathanielbd/todotorial}{https://snack.expo.dev/@nathanielbd/todotorial}. \pause What data should be kept track of using the state?
 \end{frame}
 
 \end{document}
