add mixer announcement

--- a/slides/part-1.tex
+++ b/slides/part-1.tex
@@ -33,6 +33,14 @@
     \includegraphics[width=0.25\textwidth, right]{figs/ADC_Logo_Blue.png}
 \end{frame}
 
+\begin{frame}{Announcements}
+	Developer mixer this Thursday, Feb 3 from 6-7pm!
+
+	\bigskip
+
+	Meet potential collaborators!
+\end{frame}
+
 \begin{frame}{Officer openings!}
 	\begin{itemize}
 		\item Workshop instructors
