last sec additions part 1

--- a/slides/part-1.tex
+++ b/slides/part-1.tex
@@ -34,11 +34,11 @@
 \end{frame}
 
 \begin{frame}{Announcements}
-	Developer mixer this Thursday, Feb 3 from 6-7pm!
+	Developer mixer this Thursday, Feb 3 from 6-7pm at Tate Hall 120! Meet potential collaborators!
 
 	\bigskip
 
-	Meet potential collaborators!
+	If you're here in person, feel free to get food!	
 \end{frame}
 
 \begin{frame}{Officer openings!}
